--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -314,6 +314,11 @@ on post-fs-data
     # Vibetonz
     chmod 0660 /dev/tspdrv
     chown vibe vibe /dev/tspdrv
+    
+    # Vibrator
+    chmod 0644 /sys/class/timed_output/vibrator/pwm_value
+    chown system system /sys/class/timed_output/vibrator/pwm_value
+    chown system system /sys/class/timed_output/vibrator/enable
 
     # volume up/down key
     chown radio system /sys/class/sec/sec_key/wakeup_keys
